[tool.poetry]
name = "physics-simulator"
version = "0.1.0"
description = "A Physics Simulator using Python."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/Physics-Simulator"
repository = "https://github.com/yourusername/Physics-Simulator"
keywords = ["physics", "simulation", "python"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scipy = "^1.7"
matplotlib = "^3.4"
simpy = "^4.0"
PyOpenGL = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"